# valib

./: .gitignore  Cargo.toml  LICENSE  Makefile.crates.toml  Makefile.plugins.toml  README.md  bundler.toml  flake.nix  pyproject.toml  rust-toolchain  rust-toolchain.toml
crates/valib-core/: Cargo.toml
crates/valib-core/src/: benchmarking.rs  lib.rs  util.rs
crates/valib-core/src/dsp/: blocks.rs  buffer.rs  mod.rs  parameter.rs
crates/valib-core/src/math/: fast.rs  interpolation.rs  lut.rs  mod.rs  nr.rs
crates/valib-core/src/util/: tests.rs
crates/valib-derive/: Cargo.toml
crates/valib-derive/src/: lib.rs
crates/valib-derive/src/snapshots/: valib_derive__tests__simple_derive.snap
crates/valib-filters/: Cargo.toml
crates/valib-filters/src/: fir.rs  halfband.rs  ladder.rs  lib.rs  specialized.rs  statespace.rs  svf.rs
crates/valib-filters/src/biquad/: design.rs  mod.rs
crates/valib-filters/src/snapshots/: valib__filters__ladder__tests__test_ladder_hz_cfalse_r0.2.snap  valib__filters__ladder__tests__test_ladder_hz_cfalse_r0.snap  valib__filters__ladder__tests__test_ladder_hz_ctrue_r0.1.snap  valib__filters__ladder__tests__test_ladder_hz_ctrue_r0.5.snap  valib__filters__ladder__tests__test_ladder_hz_ctrue_r0.snap  valib__filters__ladder__tests__test_ladder_hz_ctrue_r1.snap  valib__filters__ladder__tests__test_ladder_ir_valib__filters__ladder__Ideal_cfalse_r0.1.snap  valib__filters__ladder__tests__test_ladder_ir_valib__filters__ladder__Ideal_ctrue_r0.5.snap  valib__filters__ladder__tests__test_ladder_ir_valib__filters__ladder__OTA_valib__saturators__Tanh__ctrue_r0.1.snap  valib__filters__ladder__tests__test_ladder_ir_valib__filters__ladder__OTA_valib__saturators__Tanh__ctrue_r0.snap  valib__filters__ladder__tests__test_ladder_ir_valib__filters__ladder__OTA_valib__saturators__Tanh__ctrue_r1.snap  valib__filters__ladder__tests__test_ladder_ir_valib__filters__ladder__Transistor_valib__saturators__clippers__DiodeClipperModel_f64___cfalse_r0.snap  valib__filters__ladder__tests__test_ladder_ir_valib__filters__ladder__Transistor_valib__saturators__clippers__DiodeClipperModel_f64___cfalse_r1.snap  valib__filters__ladder__tests__test_ladder_ir_valib__filters__ladder__Transistor_valib__saturators__clippers__DiodeClipperModel_f64___ctrue_r0.5.snap  valib__filters__statespace__tests__rc_filter.snap  valib__filters__statespace__tests__rc_filter_hz.snap  valib__filters__svf__tests__svf_hz.snap  valib__fir__tests__fir_direct.snap  valib_filters__ladder__tests__test_ladder_hz_cfalse_r0.1.snap  valib_filters__ladder__tests__test_ladder_hz_cfalse_r0.2.snap  valib_filters__ladder__tests__test_ladder_hz_cfalse_r0.5.snap  valib_filters__ladder__tests__test_ladder_hz_cfalse_r0.snap  valib_filters__ladder__tests__test_ladder_hz_cfalse_r1.snap  valib_filters__ladder__tests__test_ladder_hz_ctrue_r0.1.snap  valib_filters__ladder__tests__test_ladder_hz_ctrue_r0.2.snap  valib_filters__ladder__tests__test_ladder_hz_ctrue_r0.5.snap  valib_filters__ladder__tests__test_ladder_hz_ctrue_r0.snap  valib_filters__ladder__tests__test_ladder_hz_ctrue_r1.snap  valib_filters__ladder__tests__test_ladder_ir_valib_filters__ladder__Ideal_cfalse_r0.5.snap  valib_filters__ladder__tests__test_ladder_ir_valib_filters__ladder__Ideal_ctrue_r0.1.snap  valib_filters__ladder__tests__test_ladder_ir_valib_filters__ladder__Ideal_ctrue_r0.5.snap  valib_filters__ladder__tests__test_ladder_ir_valib_filters__ladder__Ideal_ctrue_r0.snap  valib_filters__ladder__tests__test_ladder_ir_valib_filters__ladder__Ideal_ctrue_r1.snap  valib_filters__ladder__tests__test_ladder_ir_valib_filters__ladder__OTA_valib_saturators__Tanh__cfalse_r0.1.snap  valib_filters__ladder__tests__test_ladder_ir_valib_filters__ladder__OTA_valib_saturators__Tanh__cfalse_r0.5.snap  valib_filters__ladder__tests__test_ladder_ir_valib_filters__ladder__OTA_valib_saturators__Tanh__cfalse_r1.snap  valib_filters__ladder__tests__test_ladder_ir_valib_filters__ladder__OTA_valib_saturators__Tanh__ctrue_r0.1.snap  valib_filters__ladder__tests__test_ladder_ir_valib_filters__ladder__OTA_valib_saturators__Tanh__ctrue_r0.5.snap  valib_filters__ladder__tests__test_ladder_ir_valib_filters__ladder__OTA_valib_saturators__Tanh__ctrue_r0.snap  valib_filters__ladder__tests__test_ladder_ir_valib_filters__ladder__OTA_valib_saturators__Tanh__ctrue_r1.snap  (+8 more)
crates/valib-nih-plug/: Cargo.toml
crates/valib-nih-plug/src/: lib.rs
crates/valib-oversample/: Cargo.toml
crates/valib-oversample/src/: lib.rs
crates/valib-oversample/src/snapshots/: valib__oversample__tests__os block.snap  valib__oversample__tests__post os.snap  valib_oversample__tests__oversampled_dsp_block.snap
crates/valib-preset-manager/: Cargo.toml
crates/valib-preset-manager/src/: bank.rs  data.rs  lib.rs
crates/valib-preset-manager/tests/: banks.rs  preset_manager.rs  presets.rs
crates/valib-preset-manager/tests/snapshots/: banks__Bad.snap  banks__Good.snap  preset_manager__list_banks.snap  preset_manager__list_presets.snap  presets__Bad Revision.snap  presets__Default.snap  (+2 more)
crates/valib-saturators/: Cargo.toml
crates/valib-saturators/src/: adaa.rs  bjt.rs  lib.rs
doc/: clippers.ipynb  (+4 more)
examples/diodeclipper/: Cargo.toml  README.md
examples/diodeclipper/src/: dsp.rs  lib.rs
examples/polysynth/: Cargo.toml
examples/polysynth/src/: dsp.rs  editor.rs  lib.rs  main.rs  params.rs
examples/saturators/: Cargo.toml  README.md
examples/saturators/src/: dsp.rs  lib.rs
examples/slew/: Cargo.toml
examples/slew/src/: lib.rs
examples/svfmixer/: Cargo.toml  README.md
examples/svfmixer/src/: dsp.rs  lib.rs
examples/wdfclipper/: Cargo.toml  README.md
examples/wdfclipper/src/: dsp.rs  lib.rs
plugins/abrasive/: Cargo.toml  Makefile.toml  README.md
plugins/abrasive/examples/: knob.rs
plugins/abrasive/src/: filter.rs  lib.rs  main.rs  spectrum.rs
plugins/refuzz/: Cargo.toml
plugins/refuzz/src/: lib.rs
plugins/ts404/: .gitignore  Cargo.toml  Makefile.toml  README.md  bundler.toml  gen_statespace.py  pyproject.toml
plugins/ts404/src/: dsp.rs  gen.rs  lib.rs  main.rs  params.rs  util.rs
(+280 files in other folders)
