[package]
name = "valib"
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace]
members = ["examples/*", "plugins/*", "xtask"]

[workspace.package]
version = "0.1.0"
rust-version = "1.68"
authors = ["Nathan Graule <me@solarliner.dev>"]
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://github.com/SolarLiner/valib"
repository = "https://github.com/SolarLiner/valib"
keywords = ["virtual-analog", "audio", "plugin", "va-modeling", "dsp"]

[workspace.dependencies]
enum-map = "2.7.3"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nalgebra = "0.32.3"


[dependencies]
az = "1.2.1"
enum-map.workspace = true
fundsp = { version = "0.16.0", optional = true }
nalgebra.workspace = true
num-traits = "0.2.18"
numeric-array = { version = "0.5.2", optional = true }
numeric_literals = "0.2.0"
portable-atomic = { version = "1.6.0", features = ["float"] }
simba = { version = "0.8.1", features = ["wide"] }
typenum = { version = "1.17.0", optional = true }

[dev-dependencies]
insta = { version = "1.34.0", features = ["csv", "redactions"] }
rstest = "0.18.2"
serde = "*"

[features]
fundsp = ["dep:fundsp", "dep:numeric-array", "dep:typenum"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.test]
opt-level = 0

[profile.test.package."*"]
opt-level = 3

[profile.release]
debug = true
lto = "fat"
codegen-units = 1
