[package]
name = "valib"
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace]
members = ["examples/*", "valib_derive", "xtask"]

[workspace.package]
version = "0.1.0"
rust-version = "1.68"
authors = ["Nathan Graule <me@solarliner.dev>"]
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://github.com/SolarLiner/valib"
repository = "https://github.com/SolarLiner/valib"
keywords = ["virtual-analog", "audio", "plugin", "va-modeling", "dsp"]

[workspace.dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
num-traits = "0.2.18"
nalgebra = "0.32.3"

[dependencies]
atomic_refcell = { version = "0.1.13", optional = true }
az = "1.2.1"
fundsp = { version = "0.17.1", optional = true }
nalgebra.workspace = true
nih_plug = { workspace = true, optional = true }
num-traits.workspace = true
numeric-array = { version = "0.5.2", optional = true }
numeric_literals = "0.2.0"
paste = "1.0.15"
petgraph = { version = "0.6.5", optional = true }
portable-atomic = { version = "1.6.0", features = ["float"] }
profiling = "1.0.15"
simba = { version = "0.8.1", features = ["wide"] }
typenum = { version = "1.17.0", optional = true }
valib_derive = { path = "valib_derive" }

[dev-dependencies]
insta = { version = "1.34.0", features = ["csv", "redactions"] }
rstest = "0.21.0"
serde = "*"
plotters = "0.3.6"

[features]
default = ["biquad-design", "oversample"]
biquad-design = ["math-polynom"]
math-polynom = []
oversample = ["biquad-design"]
fundsp = ["dep:fundsp", "dep:numeric-array", "dep:typenum"]
nih-plug = ["dep:nih_plug"]
test-plots = []
wdf = ["dep:atomic_refcell", "dep:petgraph"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.test]
opt-level = 0

[profile.test.package."*"]
opt-level = 3

[profile.release]
debug = true
lto = "fat"
codegen-units = 1