[workspace]
resolver = "2"
members = ["crates/*", "xtask"]

[workspace.package]
version = "0.1.0"
rust-version = "1.80"
authors = ["Nathan Graule <me@solarliner.dev>"]
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://github.com/SolarLiner/valib"
repository = "https://github.com/SolarLiner/valib"
keywords = ["virtual-analog", "audio", "plugin", "va-modeling", "dsp"]

[workspace.dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
num-complex = "0.4.6"
num-traits = "0.2.18"
numeric_literals = "0.2.0"
nalgebra = "0.32.3"
profiling = "1.0.15"
# Dev dependencies
insta = { version = "1.34.0", features = ["csv", "redactions"] }
rstest = "0.21.0"
serde = "*"
plotters = "0.3.6"

[package]
name = "valib"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
valib-core = { path = "crates/valib-core" }
valib-filters = { path = "crates/valib-filters", optional = true }
valib-saturators = { path = "crates/valib-saturators", optional = true }
valib-oscillators = { path = "crates/valib-oscillators", optional = true }
valib-oversample = { path = "crates/valib-oversample", optional = true }
valib-voice = { path = "crates/valib-voice", optional = true }
valib-wdf = { path = "crates/valib-wdf", optional = true }
valib-fundsp = { path = "crates/valib-fundsp", optional = true }
valib-nih-plug = { path = "crates/valib-nih-plug", optional = true }

[features]
saturators = ["dep:valib-saturators"]
filters = ["saturators", "dep:valib-filters"]
oscillators = ["dep:valib-oscillators"]
oversample = ["filters", "dep:valib-oversample"]
voice = ["dep:valib-voice"]
wdf = ["filters", "dep:valib-wdf"]
fundsp = ["dep:valib-fundsp"]
nih-plug = ["dep:valib-nih-plug"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.test]
opt-level = 0

[profile.test.package."*"]
opt-level = 3

[profile.release]
debug = true
lto = "fat"
codegen-units = 1
