[tool.poetry]
name = "valib"
version = "0.1.0"
description = ""
authors = ["Nathan Graule <solarliner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
scipy = "^1.10.0"
sympy = "^1.11.1"
lcapy = "^1.24"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.5.2"
matplotlib = "^3.6.2"
tqdm = "^4.64.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
