[package]
name = "valib-derive"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.20.8"
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = "2.0.60"

[dev-dependencies]
insta = "1.38.0"
prettyplease = "0.2.19"
