[package]
name = "valib-filters"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
valib-core = { path = "../valib-core" }
valib-saturators = { path = "../valib-saturators" }

nalgebra.workspace = true
num-traits.workspace = true
numeric_literals.workspace = true
profiling.workspace = true

[dev-dependencies]
rstest.workspace = true
insta.workspace = true
plotters.workspace = true
