[package]
name = "valib-oversample"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
valib-core = { path = "../valib-core" }
valib-filters = { path = "../valib-filters" }
valib-saturators = { path = "../valib-saturators" }

numeric_literals.workspace = true
profiling.workspace = true
num-complex.workspace = true

[dev-dependencies]
rstest.workspace = true
insta.workspace = true
nalgebra.workspace = true
plotters.workspace = true