[package]
name = "polysynth"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
nih_plug = { workspace = true, features = ["standalone"] }
nih_plug_vizia.workspace = true
num-traits.workspace = true
numeric_literals.workspace = true
valib = { path = "../..", features = ["filters", "oversample", "oscillators", "voice", "voice-upsampled", "nih-plug"]}

fastrand = { version = "2.1.1", default-features = false }
fastrand-contrib = { version = "0.1.0", default-features = false }
