[package]
name = "svfmixer"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
enum-map.workspace = true
nalgebra.workspace = true
nih_plug.workspace = true
valib = { path = "../..", features = ["nih-plug"] }