[package]
name = "wdfclipper"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug.workspace = true
num-traits.workspace = true
thread_local = "1.1.8"
valib = { path = "../..", features = ["oversample", "wdf", "nih-plug"] }
