[package]
name = "abrasive"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
atomic_float = "0.1.0"
morphorm = "*"
nih_plug = { workspace = true, features = ["standalone"] }
nih_plug_vizia = { workspace = true }
realfft = "3.3.0"
triple_buffer = "7.0.0"
valib = { path = "../.." }
resource = "0.5.0"
