[package]
name = "abrasive"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
atomic_float = "1.1.0"
morphorm = "*"
nalgebra.workspace = true
num-traits.workspace = true
nih_plug = { workspace = true, features = ["standalone"] }
nih_plug_vizia = { workspace = true }
realfft = "3.3.0"
numeric_literals = "0.2.0"
triple_buffer = "8.0.0"
valib = { path = "../..", features = ["saturators", "filters", "oversample", "nih-plug"] }
resource = "0.5.0"
once_cell = "1.18.0"
directories = "5.0.1"

[features]
default = []
distribution = []
