[package]
name = "ts404"
version = "0.1.0"
edition = "2021"
authors = ["SolarLiner <me@solarliner.dev>"]
license = "GPL-3.0-or-later"
homepage = "https://solarliner.dev"
description = "An inspired but fantasy screamer guitar pedal emulation"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
enum-map = "2.7.3"
nalgebra = "0.32.3"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
num-traits = "0.2.17"
numeric_literals = "0.2.0"
#valib = { git = "https://github.com/SolarLiner/valib.git" }
valib = { path = "../valib", features = ["nih-plug"] }

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
