[tool.poetry]
name = "ts404"
version = "0.1.0"
description = ""
authors = ["Nathan Graule <solarliner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sympy = "^1.12"
lcapy = "^1.20"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
